force-app/main/default/objects/kt_checklist__Checklist_Template__c/kt_checklist__Checklist_Template__c.object-meta.xml
<CustomObject>
    <label>Checklist Template</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Checklist Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>