force-app/main/default/objects/kt_checklist__Checklist_Template__c/fields/kt_checklist__Checklist_Count__c.field-meta.xml
<CustomField>
    <fullName>kt_checklist__Checklist_Count__c</fullName>
    <label>Checklist Count</label>
    <summaryForeignKey>kt_checklist__Checklist_Template_Item__c.kt_checklist__Checklist_Template__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>