force-app/main/default/objects/kt_checklist__Checklist_Template__c/fields/kt_checklist__Checklist_Template_Title__c.field-meta.xml
<CustomField>
    <fullName>kt_checklist__Checklist_Template_Title__c</fullName>
    <label>Checklist Template Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>