force-app/main/default/objects/kt_checklist__Checklist_Template__c/fields/kt_checklist__Description__c.field-meta.xml
<CustomField>
    <fullName>kt_checklist__Description__c</fullName>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>