force-app/main/default/objects/kt_checklist__Checklist_Template__c/fields/kt_checklist__IsLocked__c.field-meta.xml
<CustomField>
    <fullName>kt_checklist__IsLocked__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If the Template is locked, a checklist of this template can not be added with more items.</inlineHelpText>
    <label>Is Locked?</label>
    <type>Checkbox</type>
</CustomField>