force-app/main/default/objects/kt_checklist__Checklist_Template__c/fields/kt_checklist__Template_Used_Count__c.field-meta.xml
<CustomField>
    <fullName>kt_checklist__Template_Used_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Template Used Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>