force-app/main/default/objects/kt_checklist__Checklist_Template__c/listViews/kt_checklist__All.listView-meta.xml
<ListView>
    <fullName>kt_checklist__All</fullName>
    <columns>NAME</columns>
    <columns>kt_checklist__Checklist_Template_Title__c</columns>
    <columns>kt_checklist__Active__c</columns>
    <columns>kt_checklist__IsLocked__c</columns>
    <columns>kt_checklist__Template_Used_Count__c</columns>
    <columns>kt_checklist__Sequential__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>